--- a/site/package.json
+++ b/site/package.json
@@ -122,13 +122,14 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
-		"@chromatic-com/storybook": "4.1.3",
+		"@chromatic-com/storybook": "5.0.1",
 		"@octokit/types": "12.6.0",
 		"@playwright/test": "1.50.1",
-		"@storybook/addon-docs": "9.1.16",
-		"@storybook/addon-links": "9.1.16",
-		"@storybook/addon-themes": "9.1.16",
-		"@storybook/react-vite": "9.1.16",
+		"@storybook/addon-docs": "10.2.10",
+		"@storybook/addon-links": "10.2.10",
+		"@storybook/addon-themes": "10.2.10",
+		"@storybook/addon-vitest": "10.2.10",
+		"@storybook/react-vite": "10.2.10",
 		"@swc/core": "1.3.38",
 		"@swc/jest": "0.2.37",
 		"@tailwindcss/typography": "0.5.19",
@@ -174,14 +175,17 @@
 		"rollup-plugin-visualizer": "5.14.0",
 		"rxjs": "7.8.2",
 		"ssh2": "1.17.0",
-		"storybook": "9.1.16",
-		"storybook-addon-remix-react-router": "5.0.0",
+		"storybook": "10.2.10",
+		"storybook-addon-remix-react-router": "^6.0.0",
 		"tailwindcss": "3.4.18",
 		"ts-proto": "1.181.2",
 		"typescript": "5.6.3",
 		"vite": "7.2.6",
 		"vite-plugin-checker": "0.11.0",
-		"vitest": "4.0.14"
+		"vitest": "4.0.14",
+		"playwright": "^1.58.2",
+		"@vitest/browser-playwright": "4.0.14",
+		"@vitest/coverage-v8": "4.0.14"
 	},
 	"browserslist": [
 		"chrome 110",
